Added edit to dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 
 
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,6 +27,7 @@
     -->
     <title>React App</title>
     <script src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyApjld64g85YeINEMm2JPBLz_OKkONqcJs&libraries=places,geometry,drawing&v=3"></script>
+      <script src="https://use.fontawesome.com/0852e0d005.js"></script>
 
   </head>
   <body>
